Fix z-index for background layers to display properly
Added z-index: 0 to bg-layer and z-index: 1 to profile-wrapper
to ensure background images show behind the content.

--- a/assets/css/academic.css
+++ b/assets/css/academic.css
@@ -178,6 +178,7 @@ a:hover {
   background-repeat: no-repeat;
   background-position: center 80%;
   transition: opacity 1s ease-in-out;
+  z-index: 0;
 }
 
 @media screen and (max-width: 600px) {
@@ -194,6 +195,7 @@ a:hover {
   margin-left: auto;
   margin-right: auto;
   background-color: rgba(255, 255, 255, 0.9);
+  z-index: 1;
 }
 
 @media screen and (max-width: 600px) {
